--- a/arch.html
+++ b/arch.html
@@ -9,6 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="arch.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <div class="block-logo">
             <div class="block-logo-inner">
                 <div class="logo-flex">
-                    <div class="sec-left">
+                    <div class="sec-left-logo">
                         <div class="sec-left-inner">
                             <div class="logo-text-content">
                                 <a href="#">
@@ -24,6 +25,54 @@
                                         <span class="logo-text">ARCH</span><span class="red-dot">.</span>
                                     </p>
                                 </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sec-center-logo">
+                        <div class="sec-center-logo-inner">
+                            <nav class="menu-header">
+                                <ul class="menu-1">
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#service">Services</a>
+                                        </span>
+                                    </li>
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#about-us">About us</a>
+                                        </span>
+                                    </li>
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#projects">Projects</a>
+                                        </span>
+                                    </li>
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#testimonialss">Testimonialss</a>
+                                        </span>
+                                    </li>
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#pricing">Pricing</a>
+                                        </span>
+                                    </li>
+                                    <li class="list-item">
+                                        <span class="link-item">
+                                            <a href="/#contact us">Contact us</a>
+                                        </span>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="sec-right-logo">
+                        <div class="sec-right-logo-inner">
+                            <div class="social-icons">
+                                <a href="www.facebook.com">
+                                    <img src="img/facebook-icon-black.svg"
+                                        alt="facebook icon"></img>
+                                    </a>
                             </div>
                         </div>
                     </div>
