error in section 2

--- a/arch.html
+++ b/arch.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="arch.css">
+    <link rel="stylesheet" href="banner-after-menu.css">
 </head>
 
 <body>
@@ -69,19 +70,33 @@
                     <div class="sec-right-logo">
                         <div class="sec-right-logo-inner">
                             <div class="social-icons">
-                                <a href="www.facebook.com">
-                                    <img src="img/facebook-icon-black.svg"
-                                        alt="facebook icon"></img>
-                                    </a>
+                                <!-- <a href="www.facebook.com"> -->
+                                    <img src="img/facebook-icon-red.svg" alt="facebook icon"></img>
+                                <!-- </a> -->
+                            </div>
+                            <div class="social-icons">
+                                <!-- <a href="www.instagram.com"> -->
+                                    <img src="img/instagram-icon-red.svg" alt="instagram icon"></img>
+                                <!-- </a> -->
+                            </div>
+                            <div class="social-icons">
+                                <!-- <a href="www.youtube.com"> -->
+                                    <img src="img/youtube-icon-red.svg" alt="youtube icon"></img>
+                                <!-- </a> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
     </header>
     <main>
-
+        <section class="banner-after-menu">
+            <div class="banner-inner">
+                
+            </div>
+        </section>
     </main>
     <footer>
 
