--- a/arch.html
+++ b/arch.html
@@ -9,6 +9,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="section-after-banner.css">
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
 </head>
@@ -89,15 +97,12 @@
                 </div>
             </div>
         </div>
-
-    </header>
-    <main>
         <section class="banner-after-menu">
-            <div class="banner-inner">
+            <div class="cont-section-inner">
                 <header class="banner-sec">
                     <div class="grid-banner">
-                        <div class="grid-banner-inner">
-                            <div class="grid-inner">
+                        <div class="grid-inner">
+                            <div class="grid-banner-inner">
                                 <div class="content-grid">
                                     <h2 class="info-text">
                                         <span class="text-block">Architecture, Interior & Exterior Design</span>
@@ -108,7 +113,7 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="grid-empty">
+                            <div class="content-grid">
                                 <div class="content-empty"></div>
                             </div>
                         </div>
@@ -119,11 +124,10 @@
                         <div class="grid-inner-button">
                             <div class="grid-button-item">
                                 <div class="item-inner-button">
-                                    <div class="btns-group">
+                                    <div class="item-group">
                                         <div class="btns-group-inner">
-                                            <a href="#" class="red-button">
-                                                
-                                            </a>
+                                            <a href="#"><button class="button red-but">Request a quote</button></a>
+                                            <a href="#"><button class="button tr-white-but">Learn more</button></a>
                                         </div>
                                     </div>
                                 </div>
@@ -133,6 +137,37 @@
                 </footer>
             </div>
         </section>
+    </header>
+    <main>
+        <section class="cont-collection">
+            <div class="cont-section-inner">
+                <div class="collection-inner-block">
+                    <div class="content-grid">
+                        <div class="item-group">
+                            <div class="red-house">
+                                <img src="img/house-red.svg" alt="icon red house"></img>
+                            </div>
+                        </div>
+                        <p class="titel-2">
+                            <span class="box-title-2">
+                                <span class="text-title-2">
+                                    Architecture
+                                </span>
+                            </span>
+                        </p>
+                        <div class="box-red-line">
+                            <div class="red-line">
+                            </div>
+                        </div>
+                        <p class="box-subtitle-title-2">
+                            <span class="text-subtitle-title-2"> Every architecture design project is a challenge that we accept eagerly. Take a
+                                closer look at our top projects.</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
