--- a/arch.html
+++ b/arch.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect</title>
+    <link rel="icon" type="image/png"
+        href="//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd2d5b74208ed00223f7896_optimized" sizes="16x16">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+
+    <link href=" https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="section-after-banner.css">
@@ -141,31 +140,107 @@
     <main>
         <section class="cont-collection">
             <div class="cont-section-inner">
-                <div class="collection-inner-block">
-                    <div class="content-grid">
-                        <div class="item-group">
-                            <div class="red-house">
-                                <img src="img/house-red.svg" alt="icon red house"></img>
-                            </div>
-                        </div>
-                        <p class="titel-2">
-                            <span class="box-title-2">
-                                <span class="text-title-2">
-                                    Architecture
+                <div class="box-section">
+                    <div class="box-section-3-items">
+                        <div class="collection-inner-block">
+                            <div class="content-grid">
+                                <div class="item-group">
+                                    <div class="icon-red-small">
+                                        <img src="img/house-red.svg" alt="icon red house"></img>
+                                    </div>
+                                </div>
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Architecture
+                                        </span>
+                                    </span>
+                                </p>
+                                <div class="box-red-line">
+                                    <div class="red-line">
+                                    </div>
+                                </div>
+                                <span class="box-subtitle-title-2">
+                                    <span class="text-subtitle-title-2"> Every architecture design project is a
+                                        challenge
+                                        that
+                                        we accept eagerly. Take a
+                                        closer look at our top projects.</span>
                                 </span>
-                            </span>
-                        </p>
-                        <div class="box-red-line">
-                            <div class="red-line">
+                                <div class="group-learn">
+                                    <div class="btn-group-inner">
+
+                                        <a href="#"><button class="button learn"><span class="arrow"><img
+                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <p class="box-subtitle-title-2">
-                            <span class="text-subtitle-title-2"> Every architecture design project is a challenge that we accept eagerly. Take a
-                                closer look at our top projects.</span>
-                        </p>
+
+                        <div class="collection-inner-block">
+                            <div class="content-grid">
+                                <div class="item-group">
+                                    <div class="icon-red-small">
+                                        <img src="img/plan.svg" alt="icon plan"></img>
+                                    </div>
+                                </div>
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Exterior Design
+                                        </span>
+                                    </span>
+                                </p>
+                                <div class="box-red-line">
+                                    <div class="red-line">
+                                    </div>
+                                </div>
+                                <span class="box-subtitle-title-2">
+                                    <span class="text-subtitle-title-2"> We give your office and homes the most
+                                        attractive look, improving the functionality of your property by optimizing the
+                                        space. </span>
+                                </span>
+                                <div class="group-learn">
+                                    <div class="btn-group-inner">
+                                        <a href="#"><button class="button learn"><span class="arrow"><img
+                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="collection-inner-block-end">
+                            <div class="content-grid">
+                                <div class="item-group">
+                                    <div class="icon-red-small">
+                                        <img src="img/ruler.svg" alt="icon ruler"></img>
+                                    </div>
+                                </div>
+                                <p class="titel-2">
+                                    <span class="box-title-2">
+                                        <span class="text-title-2">
+                                            Interior Design
+                                        </span>
+                                    </span>
+                                </p>
+                                <div class="box-red-line">
+                                    <div class="red-line">
+                                    </div>
+                                </div>
+                                <span class="box-subtitle-title-2">
+                                    <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
+                                        our professional vision of modern and comfortable premises. </span>
+                                </span>
+                                <div class="group-learn">
+                                    <div class="btn-group-inner">
+                                        <a href="#"><button class="button learn"><span class="arrow"><img
+                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
 
     </main>
