--- a/arch.html
+++ b/arch.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="banner-after-menu.css">
 </head>
 
-<body>
+<body class="visible">
     <header>
         <div class="block-logo">
             <div class="block-logo-inner">
@@ -137,113 +137,114 @@
             </div>
         </section>
     </header>
-    <main>
-        <section class="cont-collection">
-            <div class="cont-section-inner">
-                <div class="box-section">
-                    <div class="box-section-3-items">
-                        <div class="collection-inner-block">
-                            <div class="content-grid">
-                                <div class="item-group">
-                                    <div class="icon-red-small">
-                                        <img src="img/house-red.svg" alt="icon red house"></img>
-                                    </div>
+    <!-- <main> -->
+    <section class="cont-collection">
+        <div class="cont-section-inner">
+            <div class="box-section">
+                <div class="box-section-3-items">
+                    <div class="collection-inner-block">
+                        <div class="content-grid">
+                            <div class="item-group">
+                                <div class="icon-red-small">
+                                    <img src="img/house-red.svg" alt="icon red house"></img>
                                 </div>
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Architecture
-                                        </span>
+                            </div>
+                            <p class="titel-2">
+                                <span class="box-title-2">
+                                    <span class="text-title-2">
+                                        Architecture
                                     </span>
-                                </p>
-                                <div class="box-red-line">
-                                    <div class="red-line">
-                                    </div>
-                                </div>
-                                <span class="box-subtitle-title-2">
-                                    <span class="text-subtitle-title-2"> Every architecture design project is a
-                                        challenge
-                                        that
-                                        we accept eagerly. Take a
-                                        closer look at our top projects.</span>
                                 </span>
-                                <div class="group-learn">
-                                    <div class="btn-group-inner">
+                            </p>
+                            <div class="box-red-line">
+                                <div class="red-line">
+                                </div>
+                            </div>
+                            <span class="box-subtitle-title-2">
+                                <span class="text-subtitle-title-2"> Every architecture design project is a
+                                    challenge
+                                    that
+                                    we accept eagerly. Take a
+                                    closer look at our top projects.</span>
+                            </span>
+                            <div class="group-learn">
+                                <div class="btn-group-inner">
 
-                                        <a href="#"><button class="button learn"><span class="arrow"><img
-                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                    </div>
+                                    <a href="#"><button class="button learn"><span class="arrow"><img
+                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="collection-inner-block">
-                            <div class="content-grid">
-                                <div class="item-group">
-                                    <div class="icon-red-small">
-                                        <img src="img/plan.svg" alt="icon plan"></img>
-                                    </div>
+                    <div class="collection-inner-block">
+                        <div class="content-grid">
+                            <div class="item-group">
+                                <div class="icon-red-small">
+                                    <img src="img/plan.svg" alt="icon plan"></img>
                                 </div>
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Exterior Design
-                                        </span>
+                            </div>
+                            <p class="titel-2">
+                                <span class="box-title-2">
+                                    <span class="text-title-2">
+                                        Exterior Design
                                     </span>
-                                </p>
-                                <div class="box-red-line">
-                                    <div class="red-line">
-                                    </div>
-                                </div>
-                                <span class="box-subtitle-title-2">
-                                    <span class="text-subtitle-title-2"> We give your office and homes the most
-                                        attractive look, improving the functionality of your property by optimizing the
-                                        space. </span>
                                 </span>
-                                <div class="group-learn">
-                                    <div class="btn-group-inner">
-                                        <a href="#"><button class="button learn"><span class="arrow"><img
-                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                    </div>
+                            </p>
+                            <div class="box-red-line">
+                                <div class="red-line">
+                                </div>
+                            </div>
+                            <span class="box-subtitle-title-2">
+                                <span class="text-subtitle-title-2"> We give your office and homes the most
+                                    attractive look, improving the functionality of your property by optimizing the
+                                    space. </span>
+                            </span>
+                            <div class="group-learn">
+                                <div class="btn-group-inner">
+                                    <a href="#"><button class="button learn"><span class="arrow"><img
+                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="collection-inner-block-end">
-                            <div class="content-grid">
-                                <div class="item-group">
-                                    <div class="icon-red-small">
-                                        <img src="img/ruler.svg" alt="icon ruler"></img>
-                                    </div>
+                    <div class="collection-inner-block-end">
+                        <div class="content-grid">
+                            <div class="item-group">
+                                <div class="icon-red-small">
+                                    <img src="img/ruler.svg" alt="icon ruler"></img>
                                 </div>
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Interior Design
-                                        </span>
+                            </div>
+                            <p class="titel-2">
+                                <span class="box-title-2">
+                                    <span class="text-title-2">
+                                        Interior Design
                                     </span>
-                                </p>
-                                <div class="box-red-line">
-                                    <div class="red-line">
-                                    </div>
-                                </div>
-                                <span class="box-subtitle-title-2">
-                                    <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
-                                        our professional vision of modern and comfortable premises. </span>
                                 </span>
-                                <div class="group-learn">
-                                    <div class="btn-group-inner">
-                                        <a href="#"><button class="button learn"><span class="arrow"><img
-                                                        src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                    </div>
+                            </p>
+                            <div class="box-red-line">
+                                <div class="red-line">
+                                </div>
+                            </div>
+                            <span class="box-subtitle-title-2">
+                                <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
+                                    our professional vision of modern and comfortable premises. </span>
+                            </span>
+                            <div class="group-learn">
+                                <div class="btn-group-inner">
+                                    <a href="#"><button class="button learn"><span class="arrow"><img
+                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-        </section>
+            </div>
+        </div>
+    </section>
 
-    </main>
+    <!-- </main> -->
     <footer>
 
     </footer>
