block whowe are - start

--- a/arch.html
+++ b/arch.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="section-after-banner.css">
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
+    <link rel="stylesheet" href="who-we-are.css">
 </head>
 
 <body class="visible">
@@ -117,29 +118,29 @@
                             </div>
                         </div>
                     </div>
-                </header>
-                <footer class="button-banner">
-                    <div class="grid-button-banner">
-                        <div class="grid-inner-button">
-                            <div class="grid-button-item">
-                                <div class="item-inner-button">
-                                    <div class="item-group">
-                                        <div class="btns-group-inner">
-                                            <a href="#"><button class="button red-but">Request a quote</button></a>
-                                            <a href="#"><button class="button tr-white-but">Learn more</button></a>
+                    <div class="button-banner">
+                        <div class="grid-button-banner">
+                            <div class="grid-inner-button">
+                                <div class="grid-button-item">
+                                    <div class="item-inner-button">
+                                        <div class="item-group">
+                                            <div class="btns-group-inner">
+                                                <a href="#"><button class="button red-but">Request a quote</button></a>
+                                                <a href="#"><button class="button tr-white-but">Learn more</button></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </footer>
+                </header>
             </div>
         </section>
     </header>
     <!-- <main> -->
     <section class="cont-collection">
-        <div class="cont-section-inner">
+        <div class="cont-section-inner-collection">
             <div class="box-section">
                 <div class="box-section-3-items">
                     <div class="collection-inner-block">
@@ -238,6 +239,27 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="who-we-are">
+        <div class="section-who-inner">
+            <div class="who-content">
+                <div class="box-who">
+                    <div class="box-who-inner">
+                        <div class="item-who-top">
+                            <div class="box-who-top">
+                                <div class="picture-who">
+                                    <img class="inner-pic-who" src="img/who-we.webp">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item-who-middle">
+
+                        </div>
+                
                     </div>
                 </div>
             </div>
