--- a/arch.html
+++ b/arch.html
@@ -257,9 +257,14 @@
                             </div>
                         </div>
                         <div class="item-who-middle">
-
+                            <div class="box-who-middle">
+                                <p class="before-sub">
+                                    <span class="box-before-sub">
+                                        <span class="just-text">Who we are</span>
+                                    </span>
+                                </p>
+                            </div>
                         </div>
-                
                     </div>
                 </div>
             </div>
