media for pic-who

--- a/arch.html
+++ b/arch.html
@@ -252,7 +252,9 @@
                         <div class="item-who-top">
                             <div class="box-who-top">
                                 <div class="picture-who">
-                                    <img class="inner-pic-who" src="img/who-we.webp">
+                                    <picture class="pic-who">
+                                        <img class="inner-pic-who" src="img/who-we.webp">
+                                    </picture>
                                 </div>
                             </div>
                         </div>
@@ -260,7 +262,7 @@
                             <div class="box-who-middle">
                                 <p class="before-sub">
                                     <span class="box-before-sub">
-                                        <span class="just-text">Who we are</span>
+                                        <span class="just-text">Who We Are</span>
                                     </span>
                                 </p>
                             </div>
