--- a/arch.html
+++ b/arch.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="accordion-item-who-we-are.css">
-    
+
     <link rel="icon" type="image/png"
         href="//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd2d5b74208ed00223f7896_optimized" sizes="16x16">
 
@@ -328,15 +328,21 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="item-inner-button">
+                                    <div class="item-group">
+                                        <div class="btns-group-inner">
+                                            <a href="#"><button class="button tr-white-but">See Our Latest
+                                                    Works</button></a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- </main> -->
+    </section> <!-- </main> -->
     <footer>
 
     </footer>
