add button tr-red-but

--- a/arch.html
+++ b/arch.html
@@ -331,7 +331,7 @@
                                 <div class="item-inner-button">
                                     <div class="item-group">
                                         <div class="btns-group-inner">
-                                            <a href="#"><button class="button tr-white-but">See Our Latest
+                                            <a href="#"><button class="button tr-red-but">See Our Latest
                                                     Works</button></a>
                                         </div>
                                     </div>
