finish 3th block

--- a/arch.html
+++ b/arch.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
     <link rel="stylesheet" href="who-we-are.css">
+    <link rel="stylesheet" href="portfolio.css">
 
 </head>
 
@@ -398,6 +399,9 @@
             </div>
         </div>
     </section> <!-- </main> -->
+    <section class="porfolio">
+
+    </section>
     <footer>
 
     </footer>
