--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
             <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2663.3419555615246!2d11.600319829844432!3d48.12292851276463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf5ade027307%3A0xa18544f30b41b09f!2sDesign%20Offices%20M%C3%BCnchen%20Atlas!5e0!3m2!1sru!2sit!4v1654796422525!5m2!1sru!2sit"
-                    width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+                    <!-- width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy" -->
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
